vest-dsl/test/bad/choice_arrays_variant_duplicate.vest
array = [u8; 4]
fmt(@len: u8, @tag: array) = choose(@tag) {
  [0; 4] => [u8; @len],
  [1; 4] => u32,
  [1; 4] => u32,
}
